got the button working and no errors after. Having issue with models not showing

--- a/rob-src/styles/styles.scss
+++ b/rob-src/styles/styles.scss
@@ -51,7 +51,7 @@ header {
   right: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgb(80, 0, 0);
+  background-color: rgb(0, 0, 0);
 
   p {
       position: absolute;
